--- a/index.html
+++ b/index.html
@@ -1,2 +1,36 @@
-<p> this is a new repo</p>
-<p> this is a new feature</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <header></header>
+    <main>
+        <!-- hero section -->
+        <section>
+            <div>
+               <!-- left -->
+                <div>
+
+                </div>
+                <!-- right -->
+                <div>
+                    <h1> Welcome to Web designing section </h1>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam accusamus iure debitis expedita dolorum vitae, iste amet aperiam quasi impedit tempore! Nisi rem dolore, blanditiis possimus commodi quo ipsam illum?
+                    </p>
+                    <button>Join our live class</button>
+                </div>
+            <div>
+                <!-- l -->
+            </div>
+                <img src="https://picsum.photos/400/250" alt="hero-image">
+            </div>
+            
+        </section>
+        <section></section>
+    </main>
+</body>
+</html>
